--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,5 +25,7 @@ shell-words = "1.1.0"
 test-log = "0.2.11"
 tokio = { version = "1.24.1", features = ["full", "tracing"] }
 tracing = { version = "0.1.37", features = ["log", "async-await"] }
+tracing-journald = "0.3.0"
+tracing-subscriber = "0.3.16"
 zbus = { version = "3.7.0", features = ["tokio", "chrono", "gvariant", "xml"] }
 zbus_systemd = { version = "0.0.8", features = ["login1", "systemd1"] }
