--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ clap = { version = "4.1.1", features = ["derive", "env"] }
 color-eyre = "0.6.2"
 directories = "4.0.1"
 dotenvy = "0.15.6"
+event-listener = "2.5.3"
 futures = "0.3.25"
 gvariant = "0.5.0"
 lazy_static = "1.4.0"
