--- a/d5/Cargo.toml
+++ b/d5/Cargo.toml
@@ -25,6 +25,7 @@ serde = { version = "1.0.152", features = ["derive"] }
 shell-words = "1.1.0"
 test-log = "0.2.11"
 tokio = { version = "1.24.1", features = ["full", "tracing"] }
+toml = "0.5.10"
 tracing = { version = "0.1.37", features = ["log", "async-await"] }
 tracing-journald = "0.3.0"
 tracing-subscriber = "0.3.16"
