--- a/d5/Cargo.toml
+++ b/d5/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ashpd = { version = "0.3.2", features = ["default_features", "log", "tokio_runtime"] }
+# ashpd = { version = "0.3.2", features = ["default_features", "log", "tokio_runtime"] }
 chrono = "0.4.23"
 clap = { version = "4.1.1", features = ["derive", "env"] }
 color-eyre = "0.6.2"
