--- a/kiri/Cargo.toml
+++ b/kiri/Cargo.toml
@@ -1,35 +1,35 @@
 [package]
 authors = ["Victor Berger <victor.berger@m4x.org>", "Drakulix (Victoria Brekenfeld)"]
-edition = "2018"
+edition = "2021"
 license = "MIT"
 name = "kiri"
 publish = false
 version = "0.0.1"
 
 [dependencies]
-bitflags = "1.2.1"
+bitflags = "1.3.2"
 fps_ticker = {version = "1.0.0", optional = true}
-image = {version = "0.24.0", default-features = false, optional = true}
+image = {version = "0.24.5", default-features = false, optional = true}
 rand = "0.8"
-slog = {version = "2.1.1"}
-slog-async = "2.2"
+slog = {version = "2.7.0"}
+slog-async = "2.7.0"
 slog-scope = "4.4.0"
-slog-stdlog = "4.1.0"
-slog-term = "2.8"
+directories = "4.0.1"
 thiserror = "1"
-xcursor = {version = "0.3.3", optional = true}
+xcursor = {version = "0.3.4", optional = true}
 xkbcommon = "0.5.0"
 renderdoc = {version = "0.10.1", optional = true}
 tracing = { version = "0.1.37", features = ["log"] }
-clap = { version = "4.1.4", features = ["derive"] }
+clap = { version = "4.1.4", features = ["derive", "env"] }
 color-eyre = "0.6.2"
 tracing-slog = "0.2.0"
 pretty_env_logger = "0.4.0"
+tracing-subscriber = "0.3.16"
+syslog-tracing = "0.1.0"
+tracing-journald = "0.3.0"
+smithay = { git = "https://github.com/Smithay/smithay", version = "0.3.0", features = ["backend_winit","slog-stdlog"]}
+wayland-server = { version = "0.30.0", features = ["log"] }
 
-[dependencies.smithay]
-default-features = false
-features = ["desktop", "wayland_frontend", "slog-stdlog"]
-git = "https://github.com/smithay/smithay"
 
 [dependencies.x11rb]
 default-features = false
