--- a/kiri/Cargo.toml
+++ b/kiri/Cargo.toml
@@ -24,7 +24,7 @@ clap = { version = "4.1.4", features = ["derive", "env"] }
 color-eyre = "0.6.2"
 tracing-slog = "0.2.0"
 pretty_env_logger = "0.4.0"
-tracing-subscriber = "0.3.16"
+tracing-subscriber = { version = "0.3.16", features = ["tracing", "serde", "serde_json", "regex", "env-filter", "json", "time"] }
 syslog-tracing = "0.1.0"
 tracing-journald = "0.3.0"
 smithay = { git = "https://github.com/Smithay/smithay", version = "0.3.0", features = ["backend_winit","slog-stdlog"]}
@@ -39,6 +39,10 @@ version = "0.11.1"
 
 [build-dependencies]
 gl_generator = "0.14"
+
+[profile.dev]
+opt-level = 2
+
 
 [features]
 debug = ["fps_ticker", "image/png", "renderdoc"]
