--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,10 @@ jobs:
   cargo_bloat:
     runs-on: ubuntu-latest
     steps:
+      - uses: awalsh128/cache-apt-pkgs-action@latest
+        with:
+          packages: libwayland-client-dev libwayland-cursor-dev libxkbcommon-dev libxkbcommon-x11-dev
+          version: 1.0
       - uses: actions/checkout@master
       - name: Install Rust
         uses: actions-rs/toolchain@v1
