--- a/gyaku/Cargo.toml
+++ b/gyaku/Cargo.toml
@@ -29,3 +29,4 @@ gdk4-wayland = "0.5.5"
 wayland-scanner = "0.30.0"
 wayland-protocols-wlr = "0.1.0"
 clipboard_wayland = "0.2.0"
+bitflags = "1.3.2"
