--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,11 @@ jobs:
 
   cargo_bloat:
     runs-on: ubuntu-latest
+    
     steps:
       - uses: awalsh128/cache-apt-pkgs-action@latest
         with:
-          packages: libwayland-client-dev libwayland-cursor-dev libxkbcommon-dev libxkbcommon-x11-dev
+          packages: libwayland-dev libwayland-cursor-dev libdrm-dev libseat-dev libwayland-egl-backend-dev libxkbcommon-dev libxkbcommon-x11-dev
           version: 1.0
       - uses: actions/checkout@master
       - name: Install Rust
