--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,16 +6,17 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  # yamllint disable-line rule:line-length
+  DEB_DEPS: libwayland-dev libdrm-dev libseat-dev libudev-dev libwayland-egl-backend-dev libxkbcommon-dev libxkbcommon-x11-dev
 
 jobs:
 
   cargo_bloat:
     runs-on: ubuntu-latest
-    
     steps:
       - uses: awalsh128/cache-apt-pkgs-action@latest
         with:
-          packages: libwayland-dev libdrm-dev libseat-dev libwayland-egl-backend-dev libxkbcommon-dev libxkbcommon-x11-dev
+          packages: ${{ env.DEB_DEPS }}
           version: 1.0
       - uses: actions/checkout@master
       - name: Install Rust
