--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -30,25 +30,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - uses: ./.github/dependencies
+
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
-          profile: minimal
           toolchain: stable
           components: clippy
           override: true
 
-      - name: Install required cargo
-        run: cargo install clippy-sarif sarif-fmt
-
-      - name: Run rust-clippy
-        run: cargo clippy
-          --all-features
-          --message-format=json | clippy-sarif | tee rust-clippy-results.sarif | sarif-fmt
-        continue-on-error: true
-
-      - name: Upload analysis results to GitHub
-        uses: github/codeql-action/upload-sarif@v1
+      - uses: actions-rs/clippy-check@v1
         with:
-          sarif_file: rust-clippy-results.sarif
-          wait-for-processing: true
+          token: ${{ secrets.GITHUB_TOKEN }}
+          args: --all-features
