--- a/.github/workflows/rust-clippy.yml
+++ b/.github/workflows/rust-clippy.yml
@@ -39,7 +39,18 @@ jobs:
           components: clippy
           override: true
 
-      - uses: actions-rs/clippy-check@v1
+      - name: Install required cargo
+        run: cargo install clippy-sarif sarif-fmt
+
+      - name: Run rust-clippy
+        run: cargo clippy
+          --all-features
+          --message-format=json | clippy-sarif | tee rust-clippy-results.sarif | sarif-fmt
+        continue-on-error: false
+
+      - name: Upload analysis results to GitHub
+        uses: github/codeql-action/upload-sarif@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          args: --all-features
+          sarif_file: rust-clippy-results.sarif
+          wait-for-processing: true
+
