--- a/gyaku/Cargo.toml
+++ b/gyaku/Cargo.toml
@@ -29,6 +29,10 @@ wayland-scanner = "0.30.0"
 wayland-protocols-wlr = "0.1.0"
 clipboard_wayland = "0.2.0"
 bitflags = "1.3.2"
+# puffin = "0.14.3"
+# puffin_egui = "0.20.0"
+# profiling = { version = "1.0.7", features = ["profile-with-puffin"] }
+# smithay-egui = { git = "https://github.com/Smithay/smithay-egui.git", version = "0.1.0" }
 
 
 
